* Fixed reversed link syntax.
* Added 'broken internal link' detection, and 'broken link' CSS. Invalid links are simply <span>s and can't be clicked.

* Added CSS class hooks for internal links.

* Modified the Showdown extension, deviating from Markup thus...
 - All line breaks within paragraphs are now 'hard' line breaks - the two trailing space characters are no longer needed.
 - HTML comments "<!-- -->" and their contents are now removed outright. This is so that macros inside such comments are removed, and the HTML comments can be used to comment-out macro blocks.
 - Removed ordered list <ol> generation, on the basis that false positives would simply be too confusing for authors.
 - Removed the 'blank title attribute' bug for the image syntax.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Transitions */
+
 @keyframes appear
 {
 	0% { opacity: 0 }
@@ -34,17 +36,24 @@ p, li, td, th
 	line-height: 175%;
 }
 
-a
+.internal-link, .external-link
 {
 	color: #222;
 	text-decoration: none;
 	border-bottom: 2px solid #006699;
 	transition: color 0.2s ease-in-out;
+	-webkit-transition: color 0.2s ease-in-out;
 }
 
 a:hover
 {
 	color: #006699;
+}
+
+.broken-link
+{
+	color: #993333;
+	border-bottom: 2px solid #993333;
 }
 
 div[data-role="twinestory"]
